Improving resolver dump function